--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,7 +26,8 @@
 				"-std=c++20",
 				"${workspaceFolder}\\*.cpp",
 				"-o",
-				"${fileDirname}\\main.exe"
+				"${fileDirname}\\main.exe",
+				"-Werror",
 			],
 			"options": {
 				"cwd": "${fileDirname}"
@@ -46,7 +47,7 @@
 				"/std:c++latest",
 				"/EHsc",
 				"/Fe:",
-				"${fileDirname}\\main.exe && ./main.exe",
+				"${fileDirname}\\main.exe",
 				"${workspaceFolder}\\*.cpp"
 			],
 			"options": {
