--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,12 +22,27 @@
 			"label": "Build GCC",
 			"command": "C:\\mingw64\\bin\\g++.exe",
 			"args": [
-				"-g",
+				"-IC:\\cpp_libraries\\wxWidgets-3.2.1\\include",
+				"-LC:\\cpp_libraries\\wxWidgets-3.2.1\\lib\\gcc_dll",
+				"-g3",
 				"-std=c++20",
 				"${workspaceFolder}\\*.cpp",
-				"-o",
-				"${fileDirname}\\main.exe",
-				"-Werror",
+				"-lwxbase32u",
+				"-lwxbase32u_net",
+				"-lwxbase32u_xml",
+				"-lwxmsw32u_adv",
+				"-lwxmsw32u_aui",
+				"-lwxmsw32u_core",
+				"-lwxmsw32u_gl",
+				"-lwxmsw32u_html",
+				"-lwxmsw32u_media",
+				"-lwxmsw32u_propgrid",
+				"-lwxmsw32u_ribbon",
+				"-lwxmsw32u_richtext",
+				"-lwxmsw32u_stc",
+				"-lwxmsw32u_webview",
+				"-lwxmsw32u_xrc",
+				"-o ${workspaceFolder}\\main.exe",
 			],
 			"options": {
 				"cwd": "${fileDirname}"
