--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,7 +81,10 @@
         "numeric": "cpp",
         "random": "cpp",
         "string_view": "cpp",
-        "numbers": "cpp"
+        "numbers": "cpp",
+        "hash_set": "cpp",
+        "unordered_set": "cpp",
+        "fstream": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools"
 }
