--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,7 +18,7 @@
 			"args": [
 				"/T",
 				"/IM",
-				"main.exe",
+				"snake.exe",
 				"2>NUL",
 				">NUL",
 				"/FI", 
@@ -36,11 +36,14 @@
 			"label": "Build GCC",
 			"command": "g++.exe",
 			"args": [
+				"-I${workspaceFolder}",
 				"-IC:\\cpp_libraries\\wxWidgets-3.2.1\\include",
 				"-LC:\\cpp_libraries\\wxWidgets-3.2.1\\lib\\gcc_dll",
 				"-g3",
 				"-std=c++20",
 				"${workspaceFolder}\\*.cpp",
+				"${workspaceFolder}\\Model\\*.cpp",
+				"${workspaceFolder}\\Frames\\*.cpp",
 				"-lwxbase32u",
 				"-lwxmsw32u_core",
 				//"-lwxbase32u_net",
@@ -58,7 +61,7 @@
 				//"-lwxmsw32u_xrc",
 				"-mwindows",
 				"-o",
-				"${workspaceFolder}\\dist\\main.exe",
+				"${workspaceFolder}\\#dist\\snake.exe",
 			],
 			"options": {
 				"cwd": "${fileDirname}"
@@ -77,7 +80,7 @@
 		{
 			"type": "cppbuild",
 			"label": "Run EXE",
-			"command": ".\\dist\\main.exe",
+			"command": ".\\#dist\\main.exe",
 			"args": [],
 			"options": {
 				"cwd": "${workspaceFolder}"
@@ -94,7 +97,7 @@
 				"/std:c++latest",
 				"/EHsc",
 				"/Fe:",
-				"${fileDirname}\\main.exe",
+				"${fileDirname}\\#dist\\snake.exe",
 				"${workspaceFolder}\\*.cpp"
 			],
 			"options": {
@@ -115,7 +118,7 @@
 				"-std=c++20",
 				"${workspaceFolder}\\*.cpp",
 				"-o",
-				"${fileDirname}\\main.exe"
+				"${fileDirname}\\#dist\\snake.exe"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
